--- a/src/main/resources/org/example/gui/calculatorstyle.css
+++ b/src/main/resources/org/example/gui/calculatorstyle.css
@@ -1,1 +1,10 @@
-buttongit
+.root{
+    -fx-background-color: black;
+}
+
+button{
+    -fx-background-color: grey;
+    -fx-font-size: 20px;
+    -fx-text-fill: white;
+    -fx-background-radius: 50%;
+}
