--- a/src/main/resources/org/example/gui/calculatorstyle.css
+++ b/src/main/resources/org/example/gui/calculatorstyle.css
@@ -2,9 +2,9 @@
     -fx-background-color: black;
 }
 
-button{
+Button{
     -fx-background-color: grey;
     -fx-font-size: 20px;
     -fx-text-fill: white;
-    -fx-background-radius: 50%;
+    -fx-background-radius: 50px;
 }
