--- a/src/main/resources/org/example/gui/calculatorstyle.css
+++ b/src/main/resources/org/example/gui/calculatorstyle.css
@@ -2,9 +2,24 @@
     -fx-background-color: black;
 }
 
+#Textfield-screen{
+    -fx-background-color:transparent;
+    -fx-text-fill: white;
+    -fx-font-size:40px;
+    -fx-text-alignment:center-left;
+}
 Button{
     -fx-background-color: grey;
     -fx-font-size: 20px;
     -fx-text-fill: white;
     -fx-background-radius: 50px;
+    -fx-transition:background-color 0.5s, text-fill 0.5s;
+}
+Button:hover{
+    -fx-background-color:white;
+    -fx-text-fill:#242546;
+}
+
+Button:pressed{
+    -fx-opacity:0.4;
 }
