--- a/src/main/resources/org/example/gui/calculatorstyle.css
+++ b/src/main/resources/org/example/gui/calculatorstyle.css
@@ -1,30 +1,32 @@
 .root{
-    -fx-background-color: black;
+    -fx-background-color:#18191a;
 }
-
 #calculator-screen{
     -fx-background-color:transparent;
-    -fx-text-fill: white;
+    -fx-text-fill:white;
     -fx-font-size:40px;
-    -fx-text-alignment:center-right;
+    -fx-alignment:center-right;
 }
+ /*#616161*/
 Button{
-    -fx-background-color: grey;
-    -fx-font-size: 25px;
-    -fx-text-fill: white;
-    -fx-transition:background-color 0.5s, text-fill 0.5s;
+ -fx-background-color:#242526;
+ -fx-font-size: 25px;
+ -fx-text-fill: white;
+ -fx-background-radius: 50px;
+ /*-fx-transition: 1s;*/
+
 }
 Button:hover{
     -fx-background-color:white;
-    -fx-text-fill:#242546;
+    -fx-text-fill:#242526;
 }
-
 Button:pressed{
-    -fx-opacity:0.4;
+    -fx-transform:scale(1.5);
 }
 
 #close-window-button{
-    -fx-background-color:transparent;
-    -fx-font-size : 20px;
-
+    -fx-background-color:red;
+    -fx-font-size:25px;
+    -fx-text-fill:white;
+    -fx-font-weight:500;
 }
