--- a/src/main/resources/org/example/gui/myapp.fxml
+++ b/src/main/resources/org/example/gui/myapp.fxml
@@ -11,7 +11,10 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-    <Label text="firstname" />
+    <Label text="firstname">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font></Label>
     <TextField prefHeight="28.0" prefWidth="242.0" style="-fx-background-color: lightgray;">
         <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
