--- a/src/main/resources/org/example/gui/myapp.fxml
+++ b/src/main/resources/org/example/gui/myapp.fxml
@@ -15,7 +15,7 @@
       <font>
          <Font name="System Bold" size="12.0" />
       </font></Label>
-    <TextField prefHeight="28.0" prefWidth="242.0" style="-fx-background-color: lightgray;">
+    <TextField fx:id="firstnametext" prefHeight="28.0" prefWidth="242.0" style="-fx-background-color: lightgray;">
         <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
         </font>
@@ -24,7 +24,7 @@
       <font>
          <Font name="System Bold" size="12.0" />
       </font></Label>
-    <TextField prefHeight="28.0" prefWidth="242.0" style="-fx-background-color: lightgray;">
+    <TextField fx:id="lastnametext" prefHeight="28.0" prefWidth="242.0" style="-fx-background-color: lightgray;">
         <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
         </font>
@@ -33,7 +33,7 @@
       <font>
          <Font name="System Bold" size="12.0" />
       </font></Label>
-    <TextField prefHeight="28.0" prefWidth="242.0" style="-fx-background-color: lightgray;">
+    <TextField fx:id="emailtext" prefHeight="28.0" prefWidth="242.0" style="-fx-background-color: lightgray;">
         <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
         </font>
@@ -42,7 +42,7 @@
       <font>
          <Font name="System Bold" size="12.0" />
       </font></Label>
-    <TextField prefHeight="28.0" prefWidth="242.0" style="-fx-background-color: lightgray;">
+    <TextField fx:id="coursetext" prefHeight="28.0" prefWidth="242.0" style="-fx-background-color: lightgray;">
         <font>
             <Font name="Arial Rounded MT Bold" size="12.0" />
         </font>
